--- a/Service_1/templates/index.html
+++ b/Service_1/templates/index.html
@@ -84,7 +84,7 @@
           </button>
 
           <section class="container">
-            <form id="shana-devotionals" method="POST" action="{{url_for('Fordetails')}}">
+            <form id="shana-devotionals" method="POST" action="{{url_for('home')}}">
                     <h1 style="color: salmon">Enter your details<br>
                     </h1>
             
